[package]
name = "neopixel-nrf-pwm"
version = "0.0.0"
edition = "2021"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.0"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtt-target = {version = "0.3.1", features = ["cortex-m"]}
nrf52832-hal = {path = "../nrf-hal/nrf52832-hal"}
smart-leds = "0.3.0"
